wp-content/themes/templatex1/style.css
/* ... */
.hello__wrap-readmore {
    display: flex;
    flex-direction: column;

}

.hello__readmore-btn {
    position: static;
    display: inline-block;
    order: 1;
    margin-top: 30px;
    cursor: pointer;
    /*border-bottom: 1px dotted;*/
}

.hello__readmore-text {
    margin-top: 20px;
    /*order: 0;*/
}

.block-uslugi {
    margin-top: 197px;
    padding-top: 174px;
}

@media screen and (max-width: 768px) {
    h1 {
        font-family: 'Raleway';
        font-size: 38px;
        font-weight: 200;
        font-style: normal;
        line-height: 110%;
        color: #757472;
    }

    h2 {
        font-family: 'Raleway';
        font-size: 30px;
        font-weight: 200;
        font-style: normal;
        line-height: 120%;
        /* identical to box height, or 36px */
        color: #757472;
    }

    h3 {
        font-family: 'Raleway';
        font-size: 18px;
        font-weight: 200;
        font-style: normal;
        line-height: 110%;
        color: #757472;
    }

    p {
        font-family: 'Gilroy';
        font-size: 15px;
        font-weight: 100;
        font-style: normal;
        line-height: 150%;
        color: #757472;
    }

}

/* ÐœÐ•ÐÐ® */
.navigate {
    position: fixed;
    z-index: 10001;
    top: 0;
    left: 0;
    width: 100%;
    background-color: #F5F5F5;
    box-shadow: 0px 2px 10px 0px #0000000d;
}

.hamburger-menu {
    display: flex;
    align-items: center;
    box-sizing: border-box;
    height: 70px;
    /* position: relative; */
    /* padding-top:20px; */
}

/* ÑÐºÑ€Ñ‹Ð²Ð°ÐµÐ¼ Ñ‡ÐµÐºÐ±Ð¾ÐºÑ */
#menu__toggle {
    display: none;
    opacity: 0;
}

/* ÑÑ‚Ð¸Ð»Ð¸Ð·ÑƒÐµÐ¼ ÐºÐ½Ð¾Ð¿ÐºÑƒ */
.menu__btn {
    position: relative;
    /*outline: 1px solid red;*/
    z-index: 1;
    width: 30px;
    height: 29px;
    margin-left: 20px;
    cursor: pointer;
}

.menu__btn > span,
.menu__btn > span::before,
.menu__btn > span::after {
    position: absolute;
    display: block;
    width: 100%;
    height: 1px;
    background-color: #616161;
}

.menu__btn > span {
    top: 50%;
    transform: translate(0, -50%);
    pointer-events: none;
}

.menu__btn > span::before {
    top: -8px;
    content: '';
}

.menu__btn > span::after {
    top: 8px;
    content: '';
}

.menu__box {
    position: fixed;
    z-index: 999999;
    top: 40px;
    right: 100%;
    display: block;
    visibility: hidden;
    width: 84%;
    height: 1000px;
    margin: 0;
    margin-right: auto;
    margin-left: 8%;
    padding: 80px 0;
    list-style: none;
    text-align: center;
    background-color: #C9CCCC;
    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
}

.menu__item {
    font-family: Raleway;
    font-size: 26px;
    font-weight: 200;
    display: block;
    margin-bottom: 10px;
    padding: 12px 24px;
    text-decoration: none;
    color: #333;
}

.menu__item:hover {
    color: white;
}

.menu__btn.active > span {
    transform: rotate(45deg);
}

.menu__btn.active > span::before {
    top: 0;
    transform: rotate(0);
}

.menu__btn.active > span::after {
    top: 0;
    transform: rotate(90deg);
}

.menu__btn.active ~ .menu__box {
    left: 0;
    /* top: 41px; */
    visibility: visible;
    margin-top: 30px;
    /* overflow: auto; */
}

.menu__btn > span,
.menu__btn > span::before,
.menu__btn > span::after {
    transition-duration: .25s;
}

.menu__box {
    transition-duration: .25s;
}

.menu__item {
    transition-duration: .25s;
}

.tel { /* position: relative; *//* top:-6px; *//* display: inline-block; *//* margin-left: auto; */
    font-size: 18px;
    opacity: 50%;
}

.logo {

}


.firstBlock {
    /*margin-top: 71px;*/
}

.leftscreen {
    /* width: 60%; */
}

.kursiv {
    margin-top: 73px;
    /* margin-bottom: 7px; */
}

.rightscreen { /* width: 569px; */
}

.button {
    font-size: 16px;
    font-weight: 400;
    display: inline-block;
    box-sizing: border-box;
    width: 224px;
    height: 64px;
    margin: 4px 2px;
    margin-top: 30px;
    padding: 20px;
    cursor: pointer;
    transform: translateY(-50%);
    text-align: center;
    text-decoration: none;
    color: #757472;
    border: none;
    border-radius: 60%;
    background-color: #E0E0E2;
}

.dopLeft {
    overflow: visible !important;
}

.titleBrand {
    margin-bottom: -5px;
}

.subtitleBrand {
    margin-top: 10px;
    /* margin-bottom: -8px; */
}

.titleSubtitle {
    /* margin-top: -30px; */
    margin-bottom: 60px;
}

.buttom:hover {
    /* color: #fff;
    text-decoration: none; */
    outline: 0;
    background: rgb(0 0 0 / 30%);
}

.home-textiles {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-top: 146px;
}

.vstolbik {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.zagolovok {
    line-height: 40px;
    width: 690px;
    padding-bottom: 30px;
    /* margin-bottom: 97px; */
}

.foton {
    width: 720px;
    height: 770px;
    -webkit-animation-name: fadeIn;
    animation-name: fadeIn;
    -webkit-animation-duration: 5s;
    animation-duration: 5s;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
}

@-webkit-keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

.project {
    display: flex;
    justify-content: space-between;
}

.left__block {
    width: 913px;
}

.rigth__block {
    width: 510px;
}

.project_left {
    display: flex;
    justify-content: space-between;
    /*width: 923px;*/
}

.project-right {
    display: flex;
    justify-content: space-between;
    /*width: 510px;*/
    /* height: 200px; */
}

.projectSmall {

    /* margin-left: 25px; */

    /* margin-top: 319px; */
}

.winSmall_one {
    display: flex;
    align-items: flex-end;
    flex-direction: column;
    justify-content: space-between;
}

.projectSmall_img {
    width: 251px;
    height: 251px;
}

.projectMiddle_img {
    width: 251px;
}
/* ... */

